--- a/leili-bio.html
+++ b/leili-bio.html
@@ -10,4 +10,8 @@
 Dr. Lei Li is Director and a research scientist of ByteDance AI Lab. His research interest is on machine learning and natural language understanding and generation. Lei received his B.S. in Computer Science and Engineering from Shanghai Jiao Tong University (ACM class) and Ph.D. in Computer Science from Carnegie Mellon University, respectively. His dissertation work on fast algorithms for mining co-evolving time series was awarded ACM KDD best dissertation (runner up). His recent work on AI writer Xiaomingbot received 2nd-class award of WU Wenjun AI prize (the top AI award in China) in 2017. He is a recipient of CCF distinguished speaker in 2017, and CCF Young Elite award in 2019. Before ByteDance, he worked at EECS department of UC Berkeley and Baidu's Institute of Deep Learning in Silicon Valley (&#8220;&#23569;&#24069;&#23398;&#32773;&#8221;). He has served in the Program Committee for ICML 2014, ECML/PKDD 2014/2015, SDM 2013/2014, IJCAI 2011/2013/2016/2019, KDD 2015/2016/2019, 2017 KDD Cup co-Chair, KDD 2018 hands-on tutorial co-chair, EMNLP 2018/2019, AAAI 2019 senior PC, and as a lecturer in 2014 summer school on Probabilistic Programming for Advancing Machine Learning. He has published over 50 technical papers and holds 3 US patents. 
 
 <br>
+<br>
+<h2>Visa Status:</h2>
+US Permanent Resident<br>
+
 </body></html>
