--- a/leili-bio.html
+++ b/leili-bio.html
@@ -1,35 +1,135 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Lei Li Bio</title>
-  </head>
-  <body>
-    <h1>Short Bio:</h1>
-    Lei Li is an assistant professor in Computer Science Department at
-    University of California Santa Barbara. His research interest lies in
-    natural language pro-cessing, machine translation, and machine learning. He
-    received his B.S. from Shanghai Jiao Tong University and Ph.D. from Carnegie
-    Mellon University. His dissertation work on fast algorithms for mining
-    co-evolving time series was awarded ACM KDD best dissertation (runner up).
-    His recent work on AI writer Xiaomingbot received 2nd-class award of Wu
-    Wen-tsün AI prize in 2017. He is a recipient of ACL 2021 best paper award,
-    CCF Young Elite award in 2019, and CCF distinguished speaker in 2017. His
-    team won first places for five language translation directions and the best
-    in corpus filtering challenge in WMT 2020. Previously, he worked as a
-    post-doctoral researcher at EECS department of UC Berkeley, a principal
-    researcher at Baidu's Institute of Deep Learning in Silicon Valley, and at
-    ByteDance as the founding director of AI Lab. He has served as Associate
-    Editor of TPAMI and organizers and area chair/senior PC for multiple
-    conferences including ACL, EMNLP, NeurIPS, KDD, AAAI, IJCAI, WSDM, and CIKM.
-    He has launched ByteDance's machine translation system (VolcTrans) and
-    Xiaomingbot automatic writing system, and many of his algorithms have been
-    deployed in production (Toutiao, Douyin, Tiktok, Xigua, Feishu/Lark),
-    serving over a billion users. He has delivered five tutorials at ACL 2021,
-    EMNLP 2019, NLPCC 2019, NLPCC 2016, and KDD 2010. He was a lecturer for 2014
-    Probabilistic Programming for Advancing Machine Learning summer school at
-    Portland, USA. <br>
-    <br>
-    <a href="lilei-cv.pdf">CV</a><br>
-  </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+
+<head>
+  <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+  <meta name="description" content="Lei Li" />
+  <meta name="keywords"
+    content="machine learning deep learning natural language processing machine translation probabilistic programming" />
+  <meta name="author" content="Lei Li" />
+  <link href="style/style.min.css" rel="stylesheet" type="text/css" />
+  <title>Lei LI</title>
+</head>
+
+<body class="page-template-template-home page-id-1">
+  <header class="site-header--mobile" role="banner">
+    <div class="mobile-header-right">
+      <button type="button" class="js-toggle-nav menu-button" aria-controls="mobile-nav-tray" aria-expanded="false">
+        <span class="vh">Menu</span>
+        <svg class="menu-icon" width="48" height="33" focusable="false">
+          <use href="#menu-icon" />
+        </svg>
+      </button>
+    </div>
+  </header>
+
+  <div id="mobile-nav-tray" class="mobile-nav-tray" aria-hidden="true">
+    <div class="mobile-nav-header">
+      <div class="site-branding">
+        <a href="https://www.cmu.edu/" target="_blank" rel="home">
+          <span class="vh">Lei Li</span>
+        </a>
+      </div>
+      <button type="button" class="js-toggle-nav close-button" aria-controls="mobile-nav-tray" aria-expanded="false">
+        <span class="vh">Close</span>
+        <svg class="menu-icon-svg" width="33" height="33" focusable="false">
+          <use href="#close-icon" />
+        </svg>
+      </button>
+    </div>
+    <nav class="navigation--mobile">
+      <ul class="mobile-nav mobile-nav--main">
+        <li class="current-menu-item"><a href="index.html">Home</a></li>
+        <li><a href="research.html">Research</a></li>
+        <li><a href="teaching.html">Teaching</a></li>
+        <li>
+          <a href="pubs.html">Publications</a>
+        </li>
+        <li><a href="people.html">People</a></li>
+        <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div>
+    <header id="masthead" class="site-header" role="banner">
+      <div class="wrap">
+
+        <div class="l-header">
+          <div class="l-header-col-1">
+
+            <div class="site-branding">
+              <a href="https://www.cmu.edu/" target="_blank" rel="home">
+                <span class="vh">Lei Li</span>
+                <svg class="site-logo" width="64" height="77" focusable="false">
+                  <use href="#site-logo" />
+                </svg>
+              </a>
+            </div>
+
+          </div>
+          <div class="l-header-col-2">
+
+            <div class="site-navigation">
+              <nav class="js-accessible-menu navigation--main" aria-label="Main Navigation" role="navigation">
+                <ul class="nav-list">
+                  <li class="current-menu-item"><a href="index.html">Home</a></li>
+                  <li><a href="research.html">Research</a></li>
+                  <li><a href="teaching.html">Teaching</a></li>
+                  <li>
+                    <a href="pubs.html">Publications</a>
+                  </li>
+                  <li><a href="people.html">People</a></li>
+                  <li><a href="https://lileicc.github.io/blog/">Blog</a></li>
+                </ul>
+              </nav>
+
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </header>
+    <main id="main" class="site-main" role="main">
+      <header class="banner">
+        <div class="wrap">
+          <div class="banner-title">
+            <span class="h1">
+              Short Bio </span>
+          </div>
+        </div>
+      </header>
+      <section class="section">
+        <div class="wrap">
+          Lei Li is an assistant professor in Computer Science Department at
+          University of California Santa Barbara. His research interest lies in
+          natural language pro-cessing, machine translation, and machine learning. He
+          received his B.S. from Shanghai Jiao Tong University and Ph.D. from Carnegie
+          Mellon University. His dissertation work on fast algorithms for mining
+          co-evolving time series was awarded ACM KDD best dissertation (runner up).
+          His recent work on AI writer Xiaomingbot received 2nd-class award of Wu
+          Wen-tsün AI prize in 2017. He is a recipient of ACL 2021 best paper award,
+          CCF Young Elite award in 2019, and CCF distinguished speaker in 2017. His
+          team won first places for five language translation directions and the best
+          in corpus filtering challenge in WMT 2020. Previously, he worked as a
+          post-doctoral researcher at EECS department of UC Berkeley, a principal
+          researcher at Baidu's Institute of Deep Learning in Silicon Valley, and at
+          ByteDance as the founding director of AI Lab. He has served as Associate
+          Editor of TPAMI and organizers and area chair/senior PC for multiple
+          conferences including ACL, EMNLP, NeurIPS, KDD, AAAI, IJCAI, WSDM, and CIKM.
+          He has launched ByteDance's machine translation system (VolcTrans) and
+          Xiaomingbot automatic writing system, and many of his algorithms have been
+          deployed in production (Toutiao, Douyin, Tiktok, Xigua, Feishu/Lark),
+          serving over a billion users. He has delivered five tutorials at ACL 2021,
+          EMNLP 2019, NLPCC 2019, NLPCC 2016, and KDD 2010. He was a lecturer for 2014
+          Probabilistic Programming for Advancing Machine Learning summer school at
+          Portland, USA. <br>
+          <br>
+          <a href="lilei-cv.pdf">CV</a>
+        </div>
+      </section>
+    </main>
+  </div>
+</body>
+
 </html>
