--- a/leili-bio.html
+++ b/leili-bio.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Lei Li" />
   <meta name="keywords"
     content="machine learning deep learning natural language processing machine translation probabilistic programming" />
