--- a/leili-bio.html
+++ b/leili-bio.html
@@ -90,9 +90,9 @@
       </header>
       <section class="section">
         <div class="wrap">
-          Lei Li is an assistant professor in Computer Science Department at
-          University of California Santa Barbara. His research interest lies in
-          natural language pro-cessing, machine translation, and machine learning. He
+          Lei Li is an assistant professor in Language Technology Institute, School of Computer Science at
+          Carnegie Mellon University. His research interest lies in
+          natural language processing, machine learning, and drug discovery. He
           received his B.S. from Shanghai Jiao Tong University and Ph.D. from Carnegie
           Mellon University. His dissertation work on fast algorithms for mining
           co-evolving time series was awarded ACM KDD best dissertation (runner up).
@@ -105,7 +105,7 @@
           researcher at Baidu's Institute of Deep Learning in Silicon Valley, and at
           ByteDance as the founding director of AI Lab. He has served as Associate
           Editor of TPAMI and organizers and area chair/senior PC for multiple
-          conferences including ACL, EMNLP, NeurIPS, KDD, AAAI, IJCAI, WSDM, and CIKM.
+          conferences including ACL, EMNLP, ICML, ICLR, NeurIPS, KDD, AAAI, IJCAI, WSDM, and CIKM.
           He has launched ByteDance's machine translation system (VolcTrans) and
           Xiaomingbot automatic writing system, and many of his algorithms have been
           deployed in production (Toutiao, Douyin, Tiktok, Xigua, Feishu/Lark),
