--- a/leili-bio.html
+++ b/leili-bio.html
@@ -90,29 +90,17 @@
       </header>
       <section class="section">
         <div class="wrap">
-          Lei Li is an assistant professor in Language Technology Institute, School of Computer Science at
-          Carnegie Mellon University. His research interest lies in
-          natural language processing, machine learning, and drug discovery. He
-          received his B.S. from Shanghai Jiao Tong University and Ph.D. from Carnegie
-          Mellon University. His dissertation work on fast algorithms for mining
-          co-evolving time series was awarded ACM KDD best dissertation (runner up).
-          His recent work on AI writer Xiaomingbot received 2nd-class award of Wu
-          Wen-tsün AI prize in 2017. He is a recipient of ACL 2021 best paper award,
-          CCF Young Elite award in 2019, and CCF distinguished speaker in 2017. His
-          team won first places for five language translation directions and the best
-          in corpus filtering challenge in WMT 2020. Previously, he worked as a
-          post-doctoral researcher at EECS department of UC Berkeley, a principal
-          researcher at Baidu's Institute of Deep Learning in Silicon Valley, and at
-          ByteDance as the founding director of AI Lab. He has served as Associate
-          Editor of TPAMI and organizers and area chair/senior PC for multiple
-          conferences including ACL, EMNLP, ICML, ICLR, NeurIPS, KDD, AAAI, IJCAI, WSDM, and CIKM.
-          He has launched ByteDance's machine translation system (VolcTrans) and
-          Xiaomingbot automatic writing system, and many of his algorithms have been
-          deployed in production (Toutiao, Douyin, Tiktok, Xigua, Feishu/Lark),
-          serving over a billion users. He has delivered five tutorials at ACL 2021,
-          EMNLP 2019, NLPCC 2019, NLPCC 2016, and KDD 2010. He was a lecturer for 2014
-          Probabilistic Programming for Advancing Machine Learning summer school at
-          Portland, USA. <br>
+          Lei Li is an Assistant Professor in Language Technologies Institute at Carnegie Mellon University. 
+          His research interests are machine translation, trustworthy generative AI, agentic LLM, and AI-powered drug discovery. 
+          He received his B.S. from Shanghai Jiao Tong University and Ph.D. from Carnegie Mellon University. 
+          He is a recipient of ACL 2021 Best Paper Award, CCF Young Elite Award in 2019, CCF distinguished speaker in 2017, Wu Wen-tsün AI prize in 2017, and 2012 ACM SIGKDD dissertation award (runner-up), and is recognized as Notable Area Chair of ICLR 2023. 
+          His team won first places for five language translation directions and the best in corpus filtering challenge in WMT 2020. 
+          Previously, he was an associate professor (tenured) at University of California Santa Barbara, the Founding Director of ByteDance AI Lab, a Principal Scientist at Baidu, and a postdoc researcher at UC Berkeley. 
+          He is an Associate Editor of IEEE TPAMI and TMLR, and has served as organizers and area chair/senior PC for multiple conferences including ACL, EMNLP, NAACL, NeurIPS, ICML, ICLR, KDD, AAAI, IJCAI, WSDM, and CIKM. 
+          He led and developed ByteDance's machine translation system (VolcTrans) and Xiaomingbot automatic writing system, and many of his algorithms have transformed into products (Toutiao, Douyin, Tiktok, Lark), serving over a billion users. 
+          He has delivered eight tutorials at ACL 2024, NAACL 2024, CCF ADL 2022, ACL 2021, EMNLP 2019, NLPCC 2019, NLPCC 2016, and KDD 2010. 
+          He was a lecturer for 2014 Probabilistic Programming for Advancing Machine Learning summer school at Portland, OR, USA. 
+ <br>
           <br>
           <a href="lilei-cv.pdf">CV</a>
         </div>
