--- a/leili-bio.html
+++ b/leili-bio.html
@@ -35,7 +35,7 @@
       <button type="button" class="js-toggle-nav menu-button" aria-controls="mobile-nav-tray" aria-expanded="false">
         <span class="vh">Menu</span>
         <svg class="menu-icon" width="48" height="33" focusable="false">
-          <use href="#menu-icon" />
+          <use href="icons/icons.svg#menu-icon" />
         </svg>
       </button>
     </div>
@@ -51,7 +51,7 @@
       <button type="button" class="js-toggle-nav close-button" aria-controls="mobile-nav-tray" aria-expanded="false">
         <span class="vh">Close</span>
         <svg class="menu-icon-svg" width="33" height="33" focusable="false">
-          <use href="#close-icon" />
+          <use href="icons/icons.svg#close-icon" />
         </svg>
       </button>
     </div>
