--- a/leili-bio.html
+++ b/leili-bio.html
@@ -105,7 +105,7 @@
       </header>
       <section id="intro-sec" class="section">
         <div class="wrap">
-          Lei Li is an Assistant Professor in Language Technologies Institute at Carnegie Mellon University. 
+          Lei Li is an Associate Professor in Language Technologies Institute at Carnegie Mellon University. 
           His research interests are machine translation, trustworthy generative AI, agentic LLM, and AI-powered drug discovery. 
           He received his B.S. from Shanghai Jiao Tong University and Ph.D. from Carnegie Mellon University. 
           He is a recipient of ACL 2021 Best Paper Award, CCF Young Elite Award in 2019, CCF distinguished speaker in 2017, Wu Wen-tsün AI prize in 2017, and 2012 ACM SIGKDD dissertation award (runner-up), and is recognized as Notable Area Chair of ICLR 2023. 
