--- a/leili-bio.html
+++ b/leili-bio.html
@@ -59,6 +59,7 @@
       <ul class="mobile-nav mobile-nav--main">
         <li><a href="index.html">Home</a></li>
         <li><a href="https://leililab.github.io">Group</a></li>
+        <li><a href="https://leililab.github.io/publications">Publication</a></li>
         <li><a href="teaching.html">Teaching</a></li>
         <li><a href="resource.html">Resource</a></li>
         <li class="current-menu-item"><a href="leili-bio.html">Bio</a></li>
@@ -79,6 +80,7 @@
                 <ul class="nav-list">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="https://leililab.github.io">Group</a></li>
+                  <li><a href="https://leililab.github.io/publications">Publication</a></li>
                   <li><a href="teaching.html">Teaching</a></li>
                   <li><a href="resource.html">Resource</a></li>
                   <li class="current-menu-item"><a href="leili-bio.html">Bio</a></li>
