--- a/leili-bio.html
+++ b/leili-bio.html
@@ -8,7 +8,7 @@
   <meta name="keywords"
     content="machine learning deep learning natural language processing machine translation probabilistic programming" />
   <meta name="author" content="Lei Li" />
-  <link href="style/style.css" rel="stylesheet" type="text/css" />
+  <link href="style/style.min.css" rel="stylesheet" type="text/css" />
   <script src="script/jquery-3.7.0.min.js"></script>
   <script src="script/mobile.js"></script>
   <script type="application/javascript">
